# appdemo

./: .gitignore  Makefile.am  configure.ac
audioservice/: .gitignore  Makefile.am  audio_service.c  control.c  control.h
multiwayland/: .gitignore  Makefile.am  buttons.ui  multishow.gresource.xml  multiwayland.c  window.ui
